--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -1,3 +1,7 @@
 @import "partials/_setup";
 @import "partials/_utils";
 @import "partials/_typography";
+@import "partials/_general";
+@import "partials/_header";
+
+
