--- a/styles/styles.css
+++ b/styles/styles.css
@@ -131,3 +131,101 @@ legend, button::-moz-focus-inner, input::-moz-focus-inner {
   -moz-box-sizing: border-box;
   -webkit-box-sizing: border-box;
   box-sizing: border-box; }
+
+h1 {
+  font-family: "Montserrat", sans-serif;
+  font-size: 4rem;
+  font-weight: 700;
+  text-transform: uppercase; }
+
+.logo {
+  font-family: "Montserrat", sans-serif;
+  text-transform: uppercase;
+  font-weight: 700;
+  font-size: 2.5rem; }
+
+.button {
+  text-transform: uppercase;
+  font-family: "Montserrat", sans-serif;
+  font-weight: 600;
+  letter-spacing: 1px; }
+
+html {
+  font-size: 62.5%; }
+
+body {
+  font-size: 1.6rem; }
+
+a {
+  text-decoration: none;
+  color: inherit; }
+
+h1 {
+  margin: 0; }
+
+ul, li {
+  margin: 0;
+  padding: 0; }
+
+li {
+  list-style-type: none; }
+
+.wrapper {
+  max-width: calc(1080px + 1rem);
+  padding: 0 1rem; }
+
+.button {
+  padding: 10px 25px;
+  background-color: #0e5f88;
+  color: #efeeee;
+  border-radius: 6px;
+  display: inline-block; }
+
+nav {
+  background-color: #fff;
+  padding: 1rem 0;
+  position: relative; }
+  nav .wrapper {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: justify;
+    -ms-flex-pack: justify;
+    justify-content: space-between; }
+
+.mobile-nav {
+  display: none; }
+  .mobile-nav__toggle {
+    opacity: 0; }
+    .mobile-nav__toggle + label::after {
+      content: '\2630';
+      font-size: 2rem; }
+
+.nav--mobile {
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0; }
+
+.header__hero {
+  background: -webkit-gradient(linear, left top, left bottom, from(rgba(255, 255, 255, 0.7)), to(rgba(255, 255, 255, 0.1))), url(../assets/image-1.jpeg) center;
+  background: -webkit-linear-gradient(rgba(255, 255, 255, 0.7), rgba(255, 255, 255, 0.1)), url(../assets/image-1.jpeg) center;
+  background: -o-linear-gradient(rgba(255, 255, 255, 0.7), rgba(255, 255, 255, 0.1)), url(../assets/image-1.jpeg) center;
+  background: linear-gradient(rgba(255, 255, 255, 0.7), rgba(255, 255, 255, 0.1)), url(../assets/image-1.jpeg) center;
+  background-size: cover;
+  height: 100vh;
+  max-height: 550px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
+  justify-content: center;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center; }
+  .header__hero__heading--small {
+    font-size: 2rem;
+    display: block;
+    padding: 1rem 0; }
