--- a/styles/partials/_typography.scss
+++ b/styles/partials/_typography.scss
@@ -18,3 +18,9 @@ h1 {
   font-weight: 600;
   letter-spacing: 1px;
 }
+
+.nav--mobile__item {
+  font-size: 2rem;
+  font-weight: 600;
+  text-transform: uppercase;
+}
