finishing learn-more tout section

--- a/styles/partials/_general.scss
+++ b/styles/partials/_general.scss
@@ -11,8 +11,12 @@ a {
   color: inherit;
 }
 
-h1 {
+h1, h2, p {
   margin: 0;
+}
+
+p {
+  margin: 2.5rem 0;
 }
 
 ul, li {
@@ -37,3 +41,22 @@ li {
   border-radius: 6px;
   display: inline-block;
 }
+
+.tout {
+  padding: 5rem 0;
+  background-color: #fff;
+  display: flex;
+  justify-content: center;
+  align-content: center;
+  text-align: center;
+  &-heading {
+    color: $main-black;
+    &--blue {
+      color: $dark-blue;
+    }
+  }
+  &-blurb {
+    color: #5d5d5d;
+  }
+}
+
