--- a/styles/partials/_header.scss
+++ b/styles/partials/_header.scss
@@ -48,6 +48,7 @@ nav {
 .header__hero {
   background: linear-gradient( rgba(255, 255, 255, 0.7), rgba(255, 255, 255, 0.1)), url(../assets/image-1.jpeg) center;
   background-size: cover;
+  color: $main-black;
   height: 100vh;
   max-height: 450px;
   display: flex;
@@ -56,7 +57,7 @@ nav {
   &__heading--small {
     font-size: 2rem;
     display: block;
-    padding: 1rem 0;  
+    margin: 1.375rem 0;  
   }
   &__wrapper {
     flex: 0 0 50%;
