--- a/styles/partials/_utils.scss
+++ b/styles/partials/_utils.scss
@@ -1,7 +1,7 @@
 // COLORS
 $dark-blue: #0e5f88;
 $light-blue: #8ecceb;
-$primary-black: #1d1d1d;
+$main-black: #1d1d1d;
 $blue-button-font: #efeeee;
 
 // FONT-FAMILIES
