--- a/styles/partials/_typography.scss
+++ b/styles/partials/_typography.scss
@@ -12,6 +12,12 @@ h2 {
   text-transform: uppercase;
 }
 
+h3 {
+  font-family: $montserrat;
+  font-size: 2rem;
+  font-weight: 700;
+}
+
 .logo {
   font-family: $montserrat;
   text-transform: uppercase;
@@ -36,4 +42,9 @@ h2 {
 .tout-blurb {
   font-size: 1.4rem;
   font-weight: 300;
+  &--small {
+    font-size: 1.2rem;
+    font-weight: 400;
+    line-height: 1.5;
+  }
 }
