--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -3,6 +3,6 @@
 @import "partials/_typography";
 @import "partials/_general";
 @import "partials/_header";
-@import "partials/_learn-more";
+@import "partials/_tout.scss";
 
 
