--- a/styles/partials/_tout.scss
+++ b/styles/partials/_tout.scss
@@ -28,6 +28,9 @@
     flex-direction: row;
     text-align: left;
     margin-bottom: 2rem;
+    &:last-child {
+      margin-bottom: 0;
+    }
     &__image {
       display: flex;
       align-items: flex-start;
@@ -46,4 +49,44 @@
 
 .tout--about-us {
   padding: 0;
+}
+
+.features {
+  display: flex;
+  flex-wrap: wrap;
+  &__tile {
+    flex: 1 0 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    border: 1px solid #8ecceb;
+    border-radius: 2px;
+    border-radius: 10px;
+    padding: 4rem;
+    margin: 1rem 0;
+    &__image {
+      width: 30%;
+      margin-bottom: 2.5rem;
+    }
+    & p.tout-blurb {
+      margin: 1.275rem 0 2.5rem;
+    }
+    & li.tout-blurb {
+      text-align: left;
+      position: relative;
+      margin-left: 20px;
+      line-height: 2;
+      &::before {
+        content: '';
+        background-image: url(../assets/check-solid.svg);
+        background-size: cover;
+        height: 15px;
+        width: 15px;
+        display: block;
+        position: absolute;
+        left: -20px;
+        top: 5px;
+      }
+    }
+  }
 }
