--- a/styles/partials/_typography.scss
+++ b/styles/partials/_typography.scss
@@ -44,7 +44,12 @@ h3 {
   font-weight: 300;
   &--small {
     font-size: 1.2rem;
-    font-weight: 400;
+    font-weight: 300;
     line-height: 1.5;
   }
+}
+
+.features__tile__heading {
+  text-transform: uppercase;
+  font-size: 1.8rem;
 }
