--- a/styles/partials/_utils.scss
+++ b/styles/partials/_utils.scss
@@ -2,6 +2,7 @@
 $dark-blue: #0e5f88;
 $light-blue: #8ecceb;
 $main-black: #1d1d1d;
+$text-grey: #dfdede;
 $blue-button-font: #efeeee;
 $bg-gray: #f1f3f3;
 
