--- a/styles/partials/_typography.scss
+++ b/styles/partials/_typography.scss
@@ -64,3 +64,9 @@ h3 {
 .gallery__item__heading {
   text-transform: uppercase;
 }
+
+.contact__form__input--text {
+  text-transform: uppercase;
+  font-size: 1.4rem;
+  font-weight: 600;
+}
