--- a/styles/partials/_general.scss
+++ b/styles/partials/_general.scss
@@ -8,6 +8,7 @@ body {
 
 img {
   max-width: 100%;
+  display: block;
 }
 
 a {
@@ -33,8 +34,11 @@ li {
 }
 
 .wrapper {
-  max-width: calc(1080px + 1rem);
+  max-width: calc(1080px);
   margin: 0 auto;
+}
+
+.spacer {
   padding: 0 1rem;
 }
 
@@ -44,6 +48,14 @@ li {
   color: $blue-button-font;
   border-radius: 6px;
   display: inline-block;
+  &--black {
+    background-color: $main-black;
+    color: #fff;
+  }
+  &--borderless {
+    border: none;
+  }
 }
+
 
 
