--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -1,10 +1,17 @@
 @import "partials/_setup";
 @import "partials/_utils";
 @import "partials/_typography";
+/*GENERAL*/
 @import "partials/_general";
+/*HEADER*/
 @import "partials/_header";
+/*MAIN CSS*/
 @import "partials/_tout.scss";
 @import "partials/_gallery.scss";
 @import "partials/_forms.scss";
+/*FOOTER*/
+@import "partials/_footer.scss";
+
+
 
 
