--- a/styles/partials/_forms.scss
+++ b/styles/partials/_forms.scss
@@ -3,15 +3,18 @@
   flex-wrap: wrap;
   justify-content: center;
   &__input--text {
-    flex: 1 0 100%;
+    width: 100%;
     background-color: $light-blue;
-    // color: $main-black;
     border: 1px solid $main-black;
-    padding: .725rem;
+    padding: 1rem 8rem;
     text-align: center;
     margin-bottom: 3rem;
-    &::placeholder {
-      color: $main-black;
+    @media (min-width: $tablet) {
+      padding: 1rem 15rem;
     }
+  }
+  & input::placeholder {
+    color: $main-black;
+    opacity: 1;
   }
 }
