--- a/styles/partials/_tout.scss
+++ b/styles/partials/_tout.scss
@@ -30,16 +30,30 @@
 .tout-tile {
   margin-bottom: 5rem;
   flex: 1 0 100%;
+  @media (min-width: $desktop) {
+    display: flex;
+    flex-basis: 50%;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
   &--last {
     margin-bottom: 0;
   }
   &--image {
     display: none;
     flex: 1 0 100%;
+    @media (min-width: $desktop) {
+      flex-basis: 50%;
+      display: flex;
+    }
   }
   &-row {
     display: flex;
     flex-wrap: wrap;
+     @media (min-width: $desktop) {
+      margin-bottom: 2rem;
+    }
   }
 }
 
@@ -49,6 +63,9 @@
   display: flex;
   flex-direction: column;
   flex: 1 0 100%;
+  @media (min-width: $desktop) {
+    flex-basis: 50%;
+  }
   &__content {
     display: flex;
     flex-direction: row;
@@ -71,6 +88,9 @@
   // display: none;
   background: url(../assets/image-4.jpeg) no-repeat center;
   background-size: cover;
+  @media (min-width: $desktop) {
+    flex: 1 0 50%;
+  }
 }
 
 .tout--about-us {
@@ -90,6 +110,10 @@
     border-radius: 10px;
     padding: 4rem;
     margin: 1rem 0;
+    @media (min-width: $desktop) {
+      flex-basis: 30%;
+      margin: 1rem;
+    }
     &__image {
       width: 30%;
       margin-bottom: 2.5rem;
@@ -140,9 +164,26 @@
 
 .team-tiles {
   display: flex;
-  // flex-wrap: wrap;
-  justify-content: center;
+  flex-wrap: wrap;
   &__image {
     display: flex;
+    flex: 1 0 100%;
+    margin-bottom: 1rem;
+    @media (min-width: $tablet) {
+      flex-basis: 30%;
+      margin: 0 1rem 0 0;
+    }
+    @media (min-width: $desktop) {
+      margin: 0 2rem 0 0;
+    }
+    &:last-child {
+      margin-bottom: 0;
+      @media (min-width: $tablet) {
+        margin: 0;
+      }
+      // @media (min-width: $desktop) {
+      //   margin: 0;
+      // }
+    }
   }
 }
