--- a/styles/partials/_footer.scss
+++ b/styles/partials/_footer.scss
@@ -1,7 +1,7 @@
 footer {
   background-color: $main-black;
   color: #fff;
-  padding: 4rem 0;
+  padding: 4rem 0 0;
   & input::placeholder {
     color: #fff;
     opacity: 1;
@@ -10,9 +10,17 @@ footer {
 
 .footer {
   &--top {
+    margin: 0 1rem;
+    border-bottom: 1px solid $text-grey;
+    display: none;
     @media (min-width: $desktop) {
       display: flex;
     }
+  }
+  &--bottom {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
   }
 }
 
@@ -31,6 +39,9 @@ footer {
   }
   &__heading {
     margin-bottom: 2rem;
+    @media (min-width: $desktop) {
+      margin-bottom: 3rem;
+    }
   }
   &__blurb {
     margin: 0;
@@ -59,7 +70,7 @@ footer {
 }
 
 .footer-area__contact-form__email {
-  background-color: black;
+  background-color: $main-black;
   border: 1px solid white;
   padding: .5rem 2rem .5rem 1rem; 
   font-size: 1rem;
@@ -87,6 +98,17 @@ footer {
   }
 }
 
+.footer-nav {
+  display: flex;
+  &__items {
+    margin-right: 5rem;
+    &:last-child {
+      margin-right: 0;
+    }
+  }
+}
+
 .footer-legal {
-  @extend .footer-area__blurb;
+  text-align: center;
+  margin: 5rem 0 0;
 }
