--- a/styles/partials/_utils.scss
+++ b/styles/partials/_utils.scss
@@ -24,5 +24,12 @@ $desktop: 800px;
   left: $left;
 }
 
+//GALLERY TILES 
+
+$gallery-tile-1: url(../assets/image-6.jpeg);
+$gallery-tile-2: url(../assets/image-7.jpeg);
+$gallery-tile-3: url(../assets/image-8.jpeg);
+$gallery-tile-4: url(../assets/image-9.jpeg);
+
 
 
