--- a/styles/partials/_tout.scss
+++ b/styles/partials/_tout.scss
@@ -77,6 +77,7 @@
   flex: 1 0 100%;
   @media (min-width: $desktop) {
     flex-basis: 50%;
+    padding: 5rem 2rem 5rem 5rem;
   }
   &__content {
     display: flex;
@@ -117,7 +118,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    border: 1px solid #8ecceb;
+    border: 1px solid $light-blue;
     border-radius: 2px;
     border-radius: 10px;
     padding: 4rem;
@@ -151,6 +152,11 @@
       }
     }
   }
+}
+
+/* HOVER */
+.features__tile:hover {
+  background-color: $light-blue;
 }
 
 .tout--testimonials {
@@ -209,6 +215,7 @@
     display: flex;
     flex: 1 0 100%;
     margin-bottom: 1rem;
+    position: relative;
     @media (min-width: $tablet) {
       flex-basis: 30%;
       margin: 0 1rem 0 0;
@@ -221,9 +228,28 @@
       @media (min-width: $tablet) {
         margin: 0;
       }
-      // @media (min-width: $desktop) {
-      //   margin: 0;
-      // }
     }
   }
+  &__info {
+    position: absolute;
+    display: none;
+    flex-direction: column;
+    justify-content: center;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0,0,0,0.7);
+    color: #fff;
+    &__name {
+      margin: 0 0 2rem;
+    }
+    &__profession {
+      margin: 0;
+    }
+  }
+}
+
+/* HOVER */
+
+.team-tiles__image:hover .team-tiles__info {
+  display: flex;
 }
