--- a/styles/partials/_footer.scss
+++ b/styles/partials/_footer.scss
@@ -2,6 +2,7 @@ footer {
   background-color: $main-black;
   color: #fff;
   padding: 4rem 0 0;
+  position: relative;
   & input::placeholder {
     color: #fff;
     opacity: 1;
@@ -10,17 +11,18 @@ footer {
 
 .footer {
   &--top {
-    margin: 0 1rem;
     border-bottom: 1px solid $text-grey;
-    display: none;
     @media (min-width: $desktop) {
       display: flex;
     }
   }
   &--bottom {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+    display: none; 
+    @media (min-width: $desktop) {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+    }
   }
 }
 
@@ -105,6 +107,18 @@ footer {
     &:last-child {
       margin-right: 0;
     }
+  }
+}
+
+.footer-share {
+  display: flex;
+  flex-direction: column;
+  position: absolute;
+  right: 2%;
+  bottom: 0;
+  &__icons {
+    width: 20px;
+    margin-bottom: 3rem;
   }
 }
 
