--- a/styles/partials/_tout.scss
+++ b/styles/partials/_tout.scss
@@ -123,6 +123,7 @@
     border-radius: 10px;
     padding: 4rem;
     margin: 1rem 0;
+    transition: background-color 300ms ease;
     @media (min-width: $desktop) {
       flex-basis: 30%;
       margin: 1rem;
@@ -240,7 +241,7 @@
     background-color: rgba(0,0,0,0.7);
     color: #fff;
     &__name {
-      margin: 0 0 2rem;
+      margin: 0 0 2rem 0;
     }
     &__profession {
       margin: 0;
