--- a/styles/partials/_utils.scss
+++ b/styles/partials/_utils.scss
@@ -12,7 +12,8 @@ $opensans: 'Open Sans', sans-serif;
 
 // MEDIA QUERIES
 $tablet: 500px;
-$desktop: 800px;
+$desktop: 850px;
+$large-desktop: 1280px;
 
 // MIXINS
 
