--- a/styles/partials/_footer.scss
+++ b/styles/partials/_footer.scss
@@ -71,13 +71,30 @@ footer {
   padding-left: 2rem;
 }
 
-.footer-area__contact-form__email {
-  background-color: $main-black;
-  border: 1px solid white;
-  padding: .5rem 2rem .5rem 1rem; 
-  font-size: 1rem;
-  color: #fff;
-  width: 250px;
+.footer-area__contact-form {
+  position: relative;
+  &__email {
+    background-color: $main-black;
+    border: 1px solid white;
+    padding: 1rem 2rem 1rem 1rem; 
+    font-size: 1rem;
+    color: #fff;
+    width: 250px;
+  }
+  &__submit {
+    background: none;
+    border: none;
+    color: #fff;
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    font-size: 1.3rem;
+  }
+}
+
+.footer-area__contact-form__input-wrapper {
+  position: relative;
+  display: inline-block;
 }
 
 .footer-area--about {
@@ -111,11 +128,22 @@ footer {
 }
 
 .footer-share {
-  display: flex;
-  flex-direction: column;
-  position: absolute;
-  right: 2%;
-  bottom: 0;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+    width: 50%;
+    margin: 4rem auto 0;
+    @media (min-width: $tablet) {
+      width: 30%;
+    }
+    @media (min-width: $large-desktop) {
+      position: absolute;
+      right: 2%;
+      top: 35%;
+      flex-direction: column;
+      width: 0;
+      margin: 0 2rem;
+    }
   &__icons {
     width: 20px;
     margin-bottom: 3rem;
@@ -124,5 +152,9 @@ footer {
 
 .footer-legal {
   text-align: center;
-  margin: 5rem 0 0;
+  margin: 2rem 0 0;
+  padding-bottom: 1rem;
+  @media (min-width: $large-desktop) {
+    margin-top: 5rem;
+  }
 }
