--- a/styles/partials/_tout.scss
+++ b/styles/partials/_tout.scss
@@ -233,15 +233,24 @@
   }
   &__info {
     position: absolute;
-    display: none;
+    bottom: 0;
+    display: flex;
     flex-direction: column;
     justify-content: center;
     width: 100%;
-    height: 100%;
+    height: 30%;
     background-color: rgba(0,0,0,0.7);
     color: #fff;
+    @media (min-width: $tablet) {
+      display: none;
+      height: 100%;
+      top: 0;
+    }
     &__name {
-      margin: 0 0 2rem 0;
+      margin: 0 0 1rem 0;
+      @media (min-width: $tablet) {
+        margin-bottom: 2rem;
+      }
     }
     &__profession {
       margin: 0;
