--- a/styles/partials/_typography.scss
+++ b/styles/partials/_typography.scss
@@ -115,6 +115,10 @@ h3 {
   }
 }
 
+.footer-area__contact-form__submit {
+  font-family: 'Font Awesome 5 free';
+}
+
 .footer-area--about .footer-area__blurb {
   line-height: 1.5;
 }
