updates to styling/layout

--- a/styles/partials/_footer.scss
+++ b/styles/partials/_footer.scss
@@ -106,7 +106,7 @@ footer {
 .footer-gallery {
   display: flex;
   flex-wrap: wrap;
-  max-width: 400px;
+  // max-width: 400px;
   &__item {
     flex: 1 0 20%;
     display: flex;
