--- a/styles/partials/_tout.scss
+++ b/styles/partials/_tout.scss
@@ -171,9 +171,33 @@
   display:flex;
   flex-direction: column;
   align-items: center;
+  // position: relative;
+  &__arrow {
+    border: solid #c9cecf;
+    border-width: 0 4px 4px 0;
+    display: inline-block;
+    padding: .6rem;
+    position: absolute;
+    top: 45%;
+    border-radius: 0px 0px 3px 0px;
+    cursor: pointer;
+    &--left {
+      transform: rotate(135deg);
+      left: -25%;
+    }
+    &--right {
+      transform: rotate(-45deg);
+      right: -25%;
+    }
+    &:hover {
+      border: solid #fff;
+      border-width: 0 4px 4px 0;
+    }
+  }
   &__image {
     width: 30%;
     max-width: 150px;
+    position: relative;
   }
 }
 
