--- a/styles/partials/_typography.scss
+++ b/styles/partials/_typography.scss
@@ -4,7 +4,7 @@ h1 {
   font-weight: 700;
   text-transform: uppercase;
   @media (min-width: $desktop) {
-    font-size: 6rem;
+    font-size: 7rem;
   }
 }
 
@@ -19,6 +19,13 @@ h3 {
   font-family: $montserrat;
   font-size: 2rem;
   font-weight: 700;
+}
+
+.header__hero__heading--small {
+  font-size: 2rem;
+  @media (min-width: $tablet) {
+    font-size: 3rem;
+  }
 }
 
 .logo {
