--- a/styles/partials/_typography.scss
+++ b/styles/partials/_typography.scss
@@ -23,7 +23,7 @@ h3 {
 
 .header__hero__heading--small {
   font-size: 2rem;
-  @media (min-width: $tablet) {
+  @media (min-width: $desktop) {
     font-size: 3rem;
   }
 }
