--- a/styles/partials/_gallery.scss
+++ b/styles/partials/_gallery.scss
@@ -19,6 +19,7 @@
     }
     &--1 {
       background-image: linear-gradient( rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), $gallery-tile-1;
+      transition: all 300ms ease-in;
       @media (min-width: $desktop) {
         background-image: $gallery-tile-1;
       }
