--- a/styles/partials/_tout.scss
+++ b/styles/partials/_tout.scss
@@ -265,8 +265,9 @@
     height: 30%;
     background-color: rgba(0,0,0,0.7);
     color: #fff;
+    transition: opacity 300ms ease;
     @media (min-width: $tablet) {
-      display: none;
+      opacity: 0;
       height: 100%;
       top: 0;
     }
@@ -285,5 +286,5 @@
 /* HOVER */
 
 .team-tiles__image:hover .team-tiles__info {
-  display: flex;
+  opacity: 1;
 }
