--- a/styles/styles.css
+++ b/styles/styles.css
@@ -320,6 +320,10 @@ li {
 .button:hover {
   background-color: #36a5dd; }
 
+.button--black:hover {
+  background-color: #fff;
+  color: #1d1d1d; }
+
 /*HEADER*/
 nav {
   background-color: #fff;
@@ -413,6 +417,24 @@ nav {
       -webkit-box-flex: 1;
       -ms-flex: 1 2 70%;
       flex: 1 2 70%; } }
+  .nav--desktop__item::after {
+    content: '';
+    display: block;
+    border-bottom: 2px solid #1d1d1d;
+    -webkit-transform: scaleX(0);
+    -ms-transform: scaleX(0);
+    transform: scaleX(0);
+    -webkit-transition: -webkit-transform 300ms ease-in-out;
+    transition: -webkit-transform 300ms ease-in-out;
+    -o-transition: transform 300ms ease-in-out;
+    transition: transform 300ms ease-in-out;
+    transition: transform 300ms ease-in-out, -webkit-transform 300ms ease-in-out; }
+
+/* HOVER */
+.nav--desktop__item:hover .nav--desktop__item::after {
+  -webkit-transform: scaleX(1);
+  -ms-transform: scaleX(1);
+  transform: scaleX(1); }
 
 .header__hero {
   background: -webkit-gradient(linear, left top, left bottom, from(rgba(255, 255, 255, 0.7)), to(rgba(255, 255, 255, 0.1))), url(../assets/image-1.jpeg) center;
@@ -756,10 +778,13 @@ nav {
     width: 100%;
     height: 30%;
     background-color: rgba(0, 0, 0, 0.7);
-    color: #fff; }
+    color: #fff;
+    -webkit-transition: opacity 300ms ease;
+    -o-transition: opacity 300ms ease;
+    transition: opacity 300ms ease; }
     @media (min-width: 500px) {
       .team-tiles__info {
-        display: none;
+        opacity: 0;
         height: 100%;
         top: 0; } }
     .team-tiles__info__name {
@@ -772,9 +797,7 @@ nav {
 
 /* HOVER */
 .team-tiles__image:hover .team-tiles__info {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex; }
+  opacity: 1; }
 
 .gallery {
   display: -webkit-box;
@@ -812,7 +835,10 @@ nav {
       background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(0, 0, 0, 0.7)), to(rgba(0, 0, 0, 0.7))), url(../assets/image-6.jpeg);
       background-image: -webkit-linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url(../assets/image-6.jpeg);
       background-image: -o-linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url(../assets/image-6.jpeg);
-      background-image: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url(../assets/image-6.jpeg); }
+      background-image: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url(../assets/image-6.jpeg);
+      -webkit-transition: all 300ms ease-in;
+      -o-transition: all 300ms ease-in;
+      transition: all 300ms ease-in; }
       @media (min-width: 850px) {
         .gallery__item--1 {
           background-image: url(../assets/image-6.jpeg); } }
