hover effect for desktop nav item

--- a/styles/partials/_header.scss
+++ b/styles/partials/_header.scss
@@ -74,19 +74,20 @@ nav .logo {
     flex: 1 2 70%;
   }
   &__item {
+    transition: transform 300ms ease;
     &::after {
       content: '';
       display: block;
       border-bottom: 2px solid $main-black;
       transform: scaleX(0);
-      transition: transform 300ms ease-in-out;
+      transition: transform 300ms ease-in;
     }
   }
 }
 
 /* HOVER */
 
-.nav--desktop__item:hover .nav--desktop__item::after {
+.nav--desktop__item:hover:after {
   transform: scaleX(1);
 }
 
