--- a/styles/partials/_gallery.scss
+++ b/styles/partials/_gallery.scss
@@ -11,6 +11,7 @@
     background-position: center;
     background-size: cover;
     color: $text-grey;
+    transition: opacity 300ms ease;
     @media (min-width: $tablet) {
       flex-basis: 50%;
     }
@@ -19,7 +20,7 @@
     }
     &--1 {
       background-image: linear-gradient( rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), $gallery-tile-1;
-      transition: all 300ms ease-in;
+      transition: all 300ms ease;
       @media (min-width: $desktop) {
         background-image: $gallery-tile-1;
       }
@@ -43,12 +44,13 @@
       }
     }
     &__content {
+      display: block;
       text-align: center;
       border: 1px solid $text-grey;
       border-radius: 10px;
       padding: 3rem 1rem;
       @media (min-width: $desktop) {
-        visibility: hidden;
+        opacity: 0;
       }
     }
   }
@@ -56,7 +58,7 @@
 
 /* HOVER */
 .gallery__item:hover .gallery__item__content {
-  visibility: visible;
+  opacity: 1;
 }
 
 .gallery__item {
