--- a/styles/partials/_tout.scss
+++ b/styles/partials/_tout.scss
@@ -265,8 +265,9 @@
     height: 30%;
     background-color: rgba(0,0,0,0.7);
     color: #fff;
-    transition: opacity 300ms ease;
+    transition: all 300ms ease;
     @media (min-width: $tablet) {
+      visibility: hidden;
       opacity: 0;
       height: 100%;
       top: 0;
@@ -286,5 +287,6 @@
 /* HOVER */
 
 .team-tiles__image:hover .team-tiles__info {
+  visibility: visible;
   opacity: 1;
 }
