--- a/styles/styles.css
+++ b/styles/styles.css
@@ -417,21 +417,27 @@ nav {
       -webkit-box-flex: 1;
       -ms-flex: 1 2 70%;
       flex: 1 2 70%; } }
-  .nav--desktop__item::after {
-    content: '';
-    display: block;
-    border-bottom: 2px solid #1d1d1d;
-    -webkit-transform: scaleX(0);
-    -ms-transform: scaleX(0);
-    transform: scaleX(0);
-    -webkit-transition: -webkit-transform 300ms ease-in-out;
-    transition: -webkit-transform 300ms ease-in-out;
-    -o-transition: transform 300ms ease-in-out;
-    transition: transform 300ms ease-in-out;
-    transition: transform 300ms ease-in-out, -webkit-transform 300ms ease-in-out; }
+  .nav--desktop__item {
+    -webkit-transition: -webkit-transform 300ms ease;
+    transition: -webkit-transform 300ms ease;
+    -o-transition: transform 300ms ease;
+    transition: transform 300ms ease;
+    transition: transform 300ms ease, -webkit-transform 300ms ease; }
+    .nav--desktop__item::after {
+      content: '';
+      display: block;
+      border-bottom: 2px solid #1d1d1d;
+      -webkit-transform: scaleX(0);
+      -ms-transform: scaleX(0);
+      transform: scaleX(0);
+      -webkit-transition: -webkit-transform 300ms ease-in;
+      transition: -webkit-transform 300ms ease-in;
+      -o-transition: transform 300ms ease-in;
+      transition: transform 300ms ease-in;
+      transition: transform 300ms ease-in, -webkit-transform 300ms ease-in; }
 
 /* HOVER */
-.nav--desktop__item:hover .nav--desktop__item::after {
+.nav--desktop__item:hover:after {
   -webkit-transform: scaleX(1);
   -ms-transform: scaleX(1);
   transform: scaleX(1); }
@@ -779,11 +785,12 @@ nav {
     height: 30%;
     background-color: rgba(0, 0, 0, 0.7);
     color: #fff;
-    -webkit-transition: opacity 300ms ease;
-    -o-transition: opacity 300ms ease;
-    transition: opacity 300ms ease; }
+    -webkit-transition: all 300ms ease;
+    -o-transition: all 300ms ease;
+    transition: all 300ms ease; }
     @media (min-width: 500px) {
       .team-tiles__info {
+        visibility: hidden;
         opacity: 0;
         height: 100%;
         top: 0; } }
@@ -797,6 +804,7 @@ nav {
 
 /* HOVER */
 .team-tiles__image:hover .team-tiles__info {
+  visibility: visible;
   opacity: 1; }
 
 .gallery {
@@ -822,7 +830,10 @@ nav {
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
-    color: #dfdede; }
+    color: #dfdede;
+    -webkit-transition: opacity 300ms ease;
+    -o-transition: opacity 300ms ease;
+    transition: opacity 300ms ease; }
     @media (min-width: 500px) {
       .gallery__item {
         -ms-flex-preferred-size: 50%;
@@ -836,9 +847,9 @@ nav {
       background-image: -webkit-linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url(../assets/image-6.jpeg);
       background-image: -o-linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url(../assets/image-6.jpeg);
       background-image: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url(../assets/image-6.jpeg);
-      -webkit-transition: all 300ms ease-in;
-      -o-transition: all 300ms ease-in;
-      transition: all 300ms ease-in; }
+      -webkit-transition: all 300ms ease;
+      -o-transition: all 300ms ease;
+      transition: all 300ms ease; }
       @media (min-width: 850px) {
         .gallery__item--1 {
           background-image: url(../assets/image-6.jpeg); } }
@@ -867,17 +878,18 @@ nav {
         .gallery__item--4 {
           background-image: url(../assets/image-9.jpeg); } }
     .gallery__item__content {
+      display: block;
       text-align: center;
       border: 1px solid #dfdede;
       border-radius: 10px;
       padding: 3rem 1rem; }
       @media (min-width: 850px) {
         .gallery__item__content {
-          visibility: hidden; } }
+          opacity: 0; } }
 
 /* HOVER */
 .gallery__item:hover .gallery__item__content {
-  visibility: visible; }
+  opacity: 1; }
 
 .gallery__item--1:hover {
   background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(0, 0, 0, 0.7)), to(rgba(0, 0, 0, 0.7))), url(../assets/image-6.jpeg);
