--- a/styles/partials/_gallery.scss
+++ b/styles/partials/_gallery.scss
@@ -13,7 +13,7 @@
     background-position: center;
     background-size: cover;
     color: $text-grey;
-    transition: opacity 300ms ease;
+    transition: visibility 300ms ease, opacity 300ms linear;
     @media (min-width: $tablet) {
       flex-basis: 50%;
     }
@@ -22,7 +22,6 @@
     }
     &--1 {
       background-image: linear-gradient( rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), $gallery-tile-1;
-      transition: all 300ms ease;
       @media (min-width: $desktop) {
         background-image: $gallery-tile-1;
       }
@@ -51,8 +50,9 @@
       border: 1px solid $text-grey;
       border-radius: 10px;
       padding: 3rem 1rem;
+      transition: visibility 300ms;
       @media (min-width: $desktop) {
-        opacity: 0;
+        visibility: none;
       }
     }
   }
@@ -60,7 +60,7 @@
 
 /* HOVER */
 .gallery__item:hover .gallery__item__content {
-  opacity: 1;
+  visibility: visible;
 }
 
 .gallery__item {
