--- a/styles/partials/_gallery.scss
+++ b/styles/partials/_gallery.scss
@@ -13,7 +13,6 @@
     background-position: center;
     background-size: cover;
     color: $text-grey;
-    transition: visibility 300ms ease, opacity 300ms linear;
     @media (min-width: $tablet) {
       flex-basis: 50%;
     }
@@ -50,9 +49,10 @@
       border: 1px solid $text-grey;
       border-radius: 10px;
       padding: 3rem 1rem;
-      transition: visibility 300ms;
+      transition: opacity 300ms linear;
       @media (min-width: $desktop) {
-        visibility: none;
+        visibility: hidden;
+        opacity: 0;
       }
     }
   }
@@ -61,6 +61,7 @@
 /* HOVER */
 .gallery__item:hover .gallery__item__content {
   visibility: visible;
+  opacity: 1;
 }
 
 .gallery__item {
