--- a/styles/partials/_footer.scss
+++ b/styles/partials/_footer.scss
@@ -1,7 +1,6 @@
 /* FOOTER */
 footer {
-  background-color: $main-black;
-  color: #fff;
+  @include theme($main-black, #fff);
   padding: 4rem 0 0;
   position: relative;
   & input::placeholder {
@@ -75,11 +74,10 @@ footer {
 .footer-area__contact-form {
   position: relative;
   &__email {
-    background-color: $main-black;
+    @include theme($main-black, #fff);
     border: 1px solid white;
     padding: 1rem 2rem 1rem 1rem; 
     font-size: 1rem;
-    color: #fff;
     width: 250px;
   }
   &__submit {
