--- a/styles/partials/_tout.scss
+++ b/styles/partials/_tout.scss
@@ -94,6 +94,9 @@
       justify-content: center;
       flex: 1 0 30%;
       margin-right: 20px;
+      @media (min-width: $tablet) {
+        flex-basis: 20%;
+      }
     }
   }
 }
@@ -274,8 +277,7 @@
     justify-content: center;
     width: 100%;
     height: 30%;
-    background-color: rgba(0,0,0,0.7);
-    color: #fff;
+    @include theme(rgba(0,0,0,0.7), #fff);
     transition: all 300ms ease;
     @media (min-width: $tablet) {
       visibility: hidden;
